# bookshelf

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install_local_env.sh  pyproject.toml
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_date_added.py  0003_remove_book_date_added_book_year.py  0004_remove_book_status_book_finished.py
books/tests/: base.py  helper.py  test_api.py
bookshelf/: settings.py  urls.py
templates/: base.html  home.html
users/migrations/: 0001_initial.py
web/: package-lock.json  package.json
web/public/: index.html
web/src/: lookup.js  repository.js
