[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = "An online bookshelf"
authors = ["Iwona <iwona.zdzieblo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
